fix small layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ input[type=radio] {
     height: 15px;
 }
 
+#customCategory {
+	width: 150px;
+	text-align: left;
+	padding: 4px 6px 6px 14px;
+}
+
 .hidden {
 	display: none;
 }
@@ -79,6 +85,7 @@ input[type=radio] {
 	width: 20px;
 	height: 20px;
 	border-radius: 100%;
+	cursor: pointer;
 }
 
 .enter-button:hover {
@@ -88,6 +95,7 @@ input[type=radio] {
 .arrow {
 	position: absolute;
 	margin-left: -10px;
+	cursor: pointer;
 }
 
 .arrow.down {
@@ -250,6 +258,7 @@ input {
 	background-color: #fff;
 	box-shadow: 5px 5px 0px var(--color-black);
 	border: 1px solid var(--color-black);
+	border-radius: 4px;
 	padding: 15px 19px;
 }
 
